Fixtures and align

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -9,6 +9,9 @@
 @zIndexNav     : @zIndexSpot+10;
 @zIndexLoading : @zIndexNav+10;
 
+@containerWidth  : 1200px;
+@containerHeight : 500px;
+
 a {
   color: #00B7FF;
 }
@@ -46,11 +49,11 @@ body {
     top:50%;
     left:50%;
     
-    width:1200px;
-    height:500px;
+    width:@containerWidth;
+    height:@containerHeight;
     
-    margin-left:1200px/-2px;
-    margin-top:500px/-2px;
+    margin-left:@containerWidth/-2px;
+    margin-top:@containerHeight/-2px;
     
     .js-loading &:after {
         content:"";
@@ -151,8 +154,8 @@ body {
     overflow:hidden;
     
     position:relative;
-    width:1200px;
-    height:500px;    
+    width:100%;
+    height:100%;    
     
     .step {
         position:absolute;
@@ -164,7 +167,7 @@ body {
         
         .spot-background, .step-background {
             min-width:100%;
-            max-width:none;
+            max-width:100%;
             min-height:none;
             max-height:none;
             position:relative;
